# mirai-desktop-tornadofx

./: .gitignore  README.md  index.md  xmake.lua
build-mirai-qt-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_logindlg.h  ui_mainwindow.h
build-mirai-qt-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/debug/: moc_logindlg.cpp  moc_mainwindow.cpp
mirai-desktop/: build.gradle  settings.gradle
mirai-desktop-cpp/: .gitignore  main.cpp
mirai-desktop/mirai-qt/: CMakeLists.txt
mirai-desktop/src/main/kotlin/org/meowcat/mirai/desktop/: MyApp.kt  main.kt
mirai-desktop/src/main/kotlin/org/meowcat/mirai/desktop/controller/: BotController.kt
mirai-desktop/src/main/kotlin/org/meowcat/mirai/desktop/css/: DefaultStyle.kt  SpecialStyle.kt
mirai-desktop/src/main/kotlin/org/meowcat/mirai/desktop/data/: Message.kt  Tools.kt
mirai-desktop/src/main/kotlin/org/meowcat/mirai/desktop/view/: GroupChat.kt  LoginView.kt  MainView.kt
mirai-qt/: .gitignore  httpclient.cpp  httpclient.h  logindlg.cpp  main.cpp  mainwindow.h  mirai-qt.pro  onebot.cpp  onebot.h  onebotclient.cpp  onebotclient.h  xmake.lua
miraiQt/: .gitignore  CMakeLists.txt  QBlockingQueue.cpp  QBlockingQueue.h  bytearrayconverter.cpp  bytearrayconverter.h  data.h  event.cpp  event.h  eventconverter.cpp  eventconverter.h  httpclient.cpp  httpclient.h  httpexception.cpp  httpexception.h  logindlg.h  logindlg.ui  main.cpp  mainwindow.h  mainwindow.ui  messageevent.cpp  messageevent.h  metaevent.cpp  metaevent.h  miraiQt_zh_CN.ts  noticeevent.cpp  noticeevent.h  onebot.cpp  onebot.h  requestevent.cpp  requestevent.h  websocketclient.cpp  websocketclient.h
onebot/: .gitignore  httpclient.cpp  httpclient.h  httpexception.h  main.cpp  onebot.cpp  onebot.h  onebot.pro  websocketclient.cpp  websocketclient.h
